@@ -125,12 +125,12 @@ $(document).ready(function() {
 	  		  <table>
 	  		  <tr>
 	  		  	<td class="label"><label id="lfirstname" for="firstname">First Name</label></td>
-	  		  	<td class="field"><input id="firstname" name="firstname" type="text" value="" maxlength="100" /></td>
+	  		  	<td class="field"><input id="firstname" name="firstname" type="text" value="aa" maxlength="100" /></td>
 	  		  	<td class="status"></td>
 	  		  </tr>
 	  		  <tr>
 	  			<td class="label"><label id="llastname" for="lastname">Last Name</label></td>
-	  			<td class="field"><input id="lastname" name="lastname" type="text" value="" maxlength="100" /></td>
+	  			<td class="field"><input id="lastname" name="lastname" type="text" value="bb" maxlength="100" /></td>
 	  			<td class="status"></td>
 	  		  </tr>
 	  		  <tr>
@@ -140,17 +140,17 @@ $(document).ready(function() {
 	  		  </tr>
 	  		  <tr>
 	  			<td class="label"><label id="lpassword" for="password">Password</label></td>
-	  			<td class="field"><input id="password" name="password" type="password" maxlength="50" value="" /></td>
+	  			<td class="field"><input id="password" name="password" type="password" maxlength="50" value="12345" /></td>
 	  			<td class="status"></td>
 	  		  </tr>
 	  		  <tr>
 	  			<td class="label"><label id="lpassword_confirm" for="password_confirm">Confirm Password</label></td>
-	  			<td class="field"><input id="password_confirm" name="password_confirm" type="password" maxlength="50" value="" /></td>
+	  			<td class="field"><input id="password_confirm" name="password_confirm" type="password" maxlength="50" value="12345" /></td>
 	  			<td class="status"></td>
 	  		  </tr>
 	  		  <tr>
 	  			<td class="label"><label id="lemail" for="email">Email Address</label></td>
-	  			<td class="field"><input id="email" name="email" type="text" value="" maxlength="150" /></td>
+	  			<td class="field"><input id="email" name="email" type="text" value="aa@bb" maxlength="150" /></td>
 	  			<td class="status"></td>
 	  		  </tr>
               	  		  <tr>
@@ -161,7 +161,7 @@ $(document).ready(function() {
 
 	  			<tr>
 	  				<td style="padding-right: 5px;">
-		  				<input id="dateformat_eu" name="dateformat" type="radio" value="0"  />
+		  				<input id="dateformat_eu" name="dateformat" type="radio" value="0" checked="checked" />
 			            <label id="ldateformat_eu" for="dateformat_eu">14/02/07</label>
 	  				</td>
 	  				<td style="padding-left: 5px;">
@@ -180,7 +180,7 @@ $(document).ready(function() {
 	  			<td class="label">&nbsp;</td>
 	  			<td class="field" colspan="2">
 		  			<div id="termswrap">
-			  			<input id="terms" type="checkbox" name="terms"  />
+			  			<input id="terms" type="checkbox" name="terms" checked="checked" />
 			            <label id="lterms" for="terms">I have read and accept the Terms of Use.</label>
 		            </div> <!-- /termswrap -->
 	  			</td>
