@@ -1,6 +1,7 @@
 <?php
 $request = trim(strtolower($_REQUEST['username']));
-//sleep(1);
+//sleep(2);
+usleep(150000);
 $users = array('asdf', 'Peter', 'Peter2', 'George');
 $valid = 'true';
 foreach($users as $user) {
